create base app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
+
+
+#logging.file.name=var/log/app.log
+##logging.level.org=ERROR
+##logging.level.com.zaxxer=ERROR
+#logging.logback.rollingpolicy.clean-history-on-start=true
