--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.thymeleaf.cache=false
 
 
 
-#logging.file.name=var/log/app.log
-##logging.level.org=ERROR
-##logging.level.com.zaxxer=ERROR
-#logging.logback.rollingpolicy.clean-history-on-start=true
+logging.file.name=var/log/app.log
+#logging.level.org=ERROR
+#logging.level.com.zaxxer=ERROR
+logging.logback.rollingpolicy.clean-history-on-start=true
