--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ logging.file.name=var/log/app.log
 #logging.level.org=ERROR
 #logging.level.com.zaxxer=ERROR
 logging.logback.rollingpolicy.clean-history-on-start=true
+java.runtime.version=11
